<resources>
    <string name="app_name">Componentes Avançados</string>
    <string name="op_o_1">Opção 1</string>
    <string name="op_o_2">Opção 2</string>
    <string name="op_o_3">Opção 3</string>
    <string name="estou_aprendedo_android">Estou aprendendo Android</string>
    <string name="op_o_selecionada">Opção selecionada</string>
    <string name="nenhuma_opcao">Nenhuma opção selecionada</string>
</resources>
