<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/estou_aprendedo_android"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/checkEstouAprendendo"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdgOpcoes"
        android:padding="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbdOpcao1"
            android:text="@string/op_o_1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbdOpcao2"
            android:text="@string/op_o_2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbdOpcao3"
            android:text="@string/op_o_3"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_o_selecionada"
        android:layout_below="@id/rdgOpcoes"
        android:onClick="mostraDados"/>

</RelativeLayout>